--- a/generate-password.yml
+++ b/generate-password.yml
@@ -8,7 +8,7 @@
   tasks:
   - name: generate a password
     set_fact:
-      service_account_password: "{{ lookup('password', '/dev/null', seed=inventory_hostname) }}"
+      service_account_password: "{{ lookup('password', '/dev/null', seed=inventory_hostname) | vault(passphrase) }}"
       cacheable: true
 
   - name: change a password for a service account
