--- a/generate-password.yml
+++ b/generate-password.yml
@@ -8,13 +8,19 @@
   tasks:
   - name: generate a password
     set_fact:
-      service_account_password: "{{ lookup('password', '/dev/null', seed=inventory_hostname) | vault(passphrase) }}"
+      service_account_password: "{{ lookup('password', '/dev/null', seed=inventory_hostname) }}"
       cacheable: true
-
+      
+  - name: vault new password
+    set_fact:
+      vault_service_account_password: "{{ vault(service_account_password) }}"
+      cacheable: true
+      
   - name: change a password for a service account
     user:
       name: "{{ service_account }}"
       state: present
-      password: "{{ service_account_password | password_hash('sha512', 65534 | random(seed=inventory_hostname) | string) }}"
+      #password: "{{ service_account_password | password_hash('sha512', 65534 | random(seed=inventory_hostname) | string) }}"
+      password: "{{ vault_service_account_password | password_hash('sha512', 65534 | random(seed=inventory_hostname) | string) }}"
     become: true
 
