--- a/run-something.yml
+++ b/run-something.yml
@@ -3,8 +3,8 @@
   gather_facts: true
 
   vars:
-    ansible_user: ansible
-    ansible_password: "{{ service_account_password }}"
+    #ansible_user: ansible
+    #ansible_password: "{{ service_account_password }}"
 
   tasks:
     - name: run something
