--- a/run-something.yml
+++ b/run-something.yml
@@ -7,6 +7,6 @@
     #ansible_user: ansible
     #ansible_password: "{{ service_account_password }}"
 
-  task:
+  tasks:
     - name: run something
       command: echo 'hello'
